Fixed text and icon alignment.

--- a/kalite/distributed/static/css/distributed/bootstrap-overrides.css
+++ b/kalite/distributed/static/css/distributed/bootstrap-overrides.css
@@ -503,8 +503,8 @@ footer {
 }
 
 @media (max-width: 480px) {
-    .manage-nav ul li{
-        margin-left: -1px;
-        width: 100px;
+    .manage-nav ul li {
+        text-align: center;
+        margin: 0 2px -10px -4px;
     }
 }
